// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with each 1`] = `
"PASS __tests__/each.test.js
  ✓ test1
  ✓ test2
  ✓ test3
  describe1
    ✓ test4
    ✓ test6
    ✓ test5
  describe3
    ✓ test11
    ✓ test12
    ✓ test10
    describe4
      ✓ test14
      ✓ test13
      ✓ test15
  describe2
    ✓ test4
    ✓ test5
    ✓ test6"
`;

exports[`works with hooks 1`] = `
"Seed is 123
  console.log
    This is before all

      at Object.log (__tests__/hooks.test.js:2:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test4

      at Object.log (__tests__/hooks.test.js:31:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test6

      at Object.log (__tests__/hooks.test.js:39:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test5

      at Object.log (__tests__/hooks.test.js:35:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test1

      at Object.log (__tests__/hooks.test.js:18:11)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    This is before each describe3

      at Object.log (__tests__/hooks.test.js:63:13)

  console.log
    test11

      at Object.log (__tests__/hooks.test.js:71:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    This is before each describe3

      at Object.log (__tests__/hooks.test.js:63:13)

  console.log
    test12

      at Object.log (__tests__/hooks.test.js:75:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    This is before each describe3

      at Object.log (__tests__/hooks.test.js:63:13)

  console.log
    test14

      at Object.log (__tests__/hooks.test.js:84:15)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    This is before each describe3

      at Object.log (__tests__/hooks.test.js:63:13)

  console.log
    test13

      at Object.log (__tests__/hooks.test.js:80:15)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    This is before each describe3

      at Object.log (__tests__/hooks.test.js:63:13)

  console.log
    test15

      at Object.log (__tests__/hooks.test.js:88:15)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    This is before each describe3

      at Object.log (__tests__/hooks.test.js:63:13)

  console.log
    test10

      at Object.log (__tests__/hooks.test.js:67:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test7

      at Object.log (__tests__/hooks.test.js:49:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test8

      at Object.log (__tests__/hooks.test.js:53:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test9

      at Object.log (__tests__/hooks.test.js:57:13)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is after all describe2

      at Object.log (__tests__/hooks.test.js:45:13)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test2

      at Object.log (__tests__/hooks.test.js:22:11)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is before each

      at Object.log (__tests__/hooks.test.js:6:11)

  console.log
    test3

      at Object.log (__tests__/hooks.test.js:26:11)

  console.log
    This is after each

      at Object.log (__tests__/hooks.test.js:10:11)

  console.log
    This is after all

      at Object.log (__tests__/hooks.test.js:14:11)
"
`;

exports[`works with passing tests 1`] = `
"PASS __tests__/success.test.js
  ✓ test1
  ✓ test2
  ✓ test3
  describe1
    ✓ test4
    ✓ test6
    ✓ test5
  describe3
    ✓ test11
    ✓ test12
    ✓ test10
    describe4
      ✓ test14
      ✓ test13
      ✓ test15
  describe2
    ✓ test7
    ✓ test8
    ✓ test9"
`;

exports[`works with snapshots 1`] = `
"PASS __tests__/snapshots.test.js
  ✓ test1
  ✓ test2
  ✓ test3
  describe1
    ✓ test4
    ✓ test6
    ✓ test5
  describe3
    ✓ test11
    ✓ test12
    ✓ test10
    describe4
      ✓ test14
      ✓ test13
      ✓ test15
  describe2
    ✓ test4
    ✓ test5
    ✓ test6"
`;
